--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tree-view",
+  "name": "tree-view-master",
   "version": "0.218.0",
   "main": "./lib/main",
   "description": "Explore and open files in the current project.",
