--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "event-kit": "^1.0.0",
-    "fs-plus": "^3.0.0",
-    "minimatch": "~0.3.0",
+    "event-kit": "^2.3.0",
+    "fs-plus": "^3.0.1",
+    "minimatch": "^3.0.4",
     "pathwatcher": "^8.0.0",
-    "temp": "~0.8.1",
-    "underscore-plus": "^1.0.0"
+    "temp": "~0.8.3",
+    "underscore-plus": "^1.6.6"
   },
   "devDependencies": {
-    "coffeelint": "^1.9.7"
+    "coffeelint": "^1.16.0"
   },
   "deserializers": {
     "TreeView": "getTreeViewInstance"
